--- a/src/pages/Exercises/Exercises.css
+++ b/src/pages/Exercises/Exercises.css
@@ -4,3 +4,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.l-height {
+  line-height: 1.5;
+}
+
+.try {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
