Add filter modal

--- a/src/pages/Exercises/Exercises.css
+++ b/src/pages/Exercises/Exercises.css
@@ -14,3 +14,8 @@
   max-height: 300px;
   object-fit: cover;
 }
+
+.my-custom-class {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
